# cDNAtlasProject

./: .gitignore  16_testing_ont_data.ipynb  17_brinkerhoff_test.ipynb  ONT_processing.ipynb  README.md  aa_classes_classifer.ipynb  basecalling.py  database.py  demo.ipynb  feature_extract.py  features.csv  kyte_hydrophobicity_conversion.py  main.py  my_model.keras  parameters.toml  plan.md  plot_trace.py  poreflow.toml  pyproject.toml  segment.py  segmentation.ipynb  stepdetect.ipynb  visualizing_traces.ipynb
data/: amino_acid_clusters.csv
extra/: aa_reference.py  clpx.py  onelettercodes.py  simulating.py  test_clpx.py
logic/: basecalling.py  clustering.py  clustering_cnn.py  cnn_brinkerhoff.py  cnn_logic.py  cnn_logic_for_data.py  cnn_logic_kmer.py  cnn_logic_kmer_5_outputs.py  database.py  database_parallel.py  feature_extract.py  feature_extract_cluster_kmer.py  feature_extract_clusters.py  feature_extract_clusters_new_approach.py  feature_extract_volume.py  feature_extraction_brinkerhoff.py  hmm_classifier.py  linear_interpolation.py  plot_trace.py  steps.py  updated_db.py  utils.py
notebooks/: 01_visualizing_traces.ipynb  03_step_detect.ipynb  04_aa_class_classifier.ipynb  04b_aa_class_classifier_more_features.ipynb  05_aa_binary_classifier(chargedvsuncharged).ipynb  06_aa_volume_classifier.ipynb  07_clustering.ipynb  07b_clustering_weighted.ipynb  08_aa_classifer_clusters.ipynb  09_cluster_sweep.ipynb  10_trace_sweep.ipynb  11_trace_sweep_with_weighted_clustering.ipynb  12_trace_sweep_isoleucine_fix.ipynb  13_newclustering.ipynb  15_cnn_cluster_sweep.ipynb  (+14 more)
