[project]
name = "cdnatlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hmmlearn>=0.3.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "poreflow>=0.3.3",
    "seaborn>=0.13.2",
]
